--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,13 +9,13 @@ branches:
 build: off
 
 install:
-   - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-card-delivery.jar" -PassThru
+
+  - java -jar ./artifacts/app-card-delivery
+
 
 
 build_script:
   - chmod +x gradlew
   - ./gradlew test -Dselenide.headless=true
-  - ./gradlew test --info
 
-on_finish:
-  - ps: Stop-Process -Id $App.Id 
+
