--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,17 +1,17 @@
-image: Ubuntu
+  
+image: Ubuntu  
 
-stack: jdk 11
+stack: jdk 11  
 
 branches:
   only:
-    - master
+    - master 
 
-build: off
+build: off 
 
 install:
-  - java -jar ./artifacts/app-card-delivery.jar. &
-
-
-build_script:
+ 
+  - java -jar ./artifacts/app-card-delivery.jar &
   - chmod +x gradlew
-  - ./gradlew test -Dselenide.headless=true
+build_script:
+  - ./gradlew test --info -Dselenide.headless=true 
